2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Migrate grub-mkimage.c to argp.

	* Makefile.util.def (grub-mkimage): Add util/argp_common.c.
	(grub-setup): Likewise.
	* util/grub-setup.c (print_version): Move to ...
	* util/argp_common.c (print_version): ... here.
	* util/grub-setup.c (argp_program_version_hook): Move to ...
	* util/argp_common.c (argp_program_version_hook): ... here.
	* util/grub-setup.c (argp_parser): Add exit (1) on fatal error for
	safety.
	* util/grub-mkimage.c (main): Migrate to argp.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Use same message as
	util/powerpc/ieee1275/grub-mkrescue.in with %s in place of command
	for better translations.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/powerpc/ieee1275/grub-mkrescue.in: Gettextize. Unify the command
	options with generic grub-mkrescue.in with the goal of future
	merge.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c: Add missing include of i18n.h
	* grub-core/lib/relocator.c: Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/ia64/efi/linux.c (find_mmap_size): Replace fatal with
	error.
	(allocate_pages): Check return value.
	Replace fatal with error.
	(grub_linux_boot): Replace printf with dprintf.
	Check find_mmap_size return value.
	Replace fatal with error.
	Don't call grub_machine_fini.
	(grub_load_elf64): Replace printf with dprintf.
	(grub_cmd_linux): Likewise.
	(grub_cmd_initrd): Likewise.
	(grub_cmd_payload): Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_cmd_devprop_load): Fix error
	message.
	* grub-core/video/radeon_fuloong2e.c
	(grub_video_radeon_fuloong2e_setup): Likewise.
	* grub-core/video/sis315pro.c (grub_video_sis315pro_setup): Likewise.
	* grub-core/video/video.c (grub_video_set_mode): Don't override
	standard out of memory message.

2012-02-03  Grégoire Sutre  <gregoire.sutre@gmail.com>
