@@ -1,0 +1,10 @@
+[NAME]
+grub-kbdcomp \- generate a GRUB keyboard layout file
+[DESCRIPTION]
+grub-kbdcomp processes a X keyboard layout description in
+.BR keymaps (5)
+format into a format that can be used by GRUB's
+.B keymap
+command.
+[SEE ALSO]
+.BR grub-mklayout (8)
